--- a/about.qmd
+++ b/about.qmd
@@ -19,26 +19,26 @@ I grew up in Wellesley, MA and attended Wellesley High School, where I developed
 
 **Virginia Tech** | PhD in Statistics
 
-Aug. 2023 - Present
+Aug 2023 - Present
 
-**Bates College** | B.A in Mathematics & Physics
+**Bates College** | BA in Mathematics & Physics
 
-Aug. 2019 - May 2023
+Aug 2019 - May 2023
 
 ## Experience
 
 **Bates College** | Astrophysics Research Assistant
 
-May 2022 - July 2023
+May 2022 - Jul 2023
 
 **Bates College** | Calculus Course Attached Tutor
 
-Sept. 2021 - Apr. 2022
+Sep 2021 - Apr 2022
 
 **Freelance** | Python Programmer
 
-June 2021 - Sept. 2021
+Jun 2021 - Sep 2021
 
 **Diamond Diagnostics** | Engineering Intern
 
-June 2017 - Aug. 2017
+Jun 2017 - Aug 2017
